kubernetes/prodcutapp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productmanager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: productmanager
  template:
    metadata:
      labels:
        app: productmanager
    spec:
      containers:
      - name: productmanager
        image: janajohny/productmanager:latest
        ports:
        - containerPort: 8090
