kubernetes/prodcutapp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: productmanager
spec:
  selector:
    app: productmanager
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 8090
  type: LoadBalancer
