kubernetes/prodcutapp/prodcut-ingress.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: productmanager
  namespace: webapps
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: productmanager
  namespace: webapps
spec:
  hosts:
  - "*"
  gateways:
  - productmanager
  http:
  - match:
    - uri:
        exact: /service-1
    - uri:
        exact: /service-1-2
    route:
    - destination:
        host: productmanager
        port:
          number: 8090
